--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     
     padding: 10px;
 }
-.css.html.python.c.matlab{
+.css, .html, .python, .c, .matlab{
     height: 120px;
     width: 120px;
 }
